# lint_ii

./: .gitignore  api.py  editor_demo.html  henk-email-draft.md  pyproject.toml  test_suggestions.py
deploy/: README.md  strato-nginx-lint-ii-proxy.conf  strato-nginx-lint-ii.conf
deploy/linux/: README.md  lint-ii.env.example  net.valkuil.lint-ii.service  setup.sh
deploy/mac/: net.valkuil.lint-ii-tunnel.plist  net.valkuil.lint-ii.plist
docs/: design-connective-words-pass.md  design-enumeration-to-bullets.md
scripts/: diag_enum.py
scripts/eval/: build_corpus.py  build_corpus2.py  corpus.json  corpus2.json  run_eval.py
src/lint_ii/core/: readability_analysis.py  sentence_analysis.py  word_features.py
src/lint_ii/linguistic_data/: __init__.py  nlp_model.py
src/lint_ii/llm/: __init__.py  hunspell_spelling.py  prompts.py  providers.py  suggestions.py
src/lint_ii/visualization/: html.py  template.jinja.html
src/visualizer/: lint_ii_visualizer.js
src/visualizer/core/: editor.js  stats.js  stylesheet.js  suggestion-popup.js  word-diff.js
