[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lint_ii"]

[tool.hatch.build.targets.sdist]
exclude = [
    "src/visualizer/",
    "examples_for_visualizer/",
    "index.html",
    "uv.lock",
    "environment.yml",
]

[project]
name = "lint_ii"
version = "0.1.2"
description = "LiNT-II is a readability assessment tool for Dutch."
authors = [
    {name = "Jenia Kim"}
]
license = {text = "EUPL"}
keywords = ["readability", "dutch", "nlp"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.7,<3.8",
    "numpy>=1.25.0,<2.0",
    "pyarrow>=21.0,<22.0",
    "mistune>=3.1,<3.2",
]

[project.optional-dependencies]
notebook = ["ipykernel", "jupyter"]
llm = ["openai>=1.0", "anthropic>=0.18", "httpx>=0.24", "spylls>=0.1"]
# The FastAPI demo server (api.py). Kept separate so the core library has no web
# dependency. Install with `pip install -e ".[llm,server]"` for the demo.
server = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1", "langid>=1.1.6"]

[project.urls]
homepage = "https://vanboefer.github.io/lint_ii/"
repository = "https://vanboefer.github.io/lint_ii/"
